fixed h1 overlap with back button

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
 }
 
 h1 {
+  padding: 0 50px;
   position: relative;
 }
 
