--- a/assets/styleSmall.css
+++ b/assets/styleSmall.css
@@ -4,8 +4,13 @@
   }
   h1 {
     font-size: 2.6rem;
+    padding: 0 60px;
   }
   h1 a {
     padding: 4px;
+  }
+  .back-button {
+    left: -15px;
+    top: -8px;
   }
 }
